--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,13 @@ body {
 .draggable {
   cursor: move;
 }
+
+.toolbar {
+  .fa {
+    padding-right: 10px;
+  }
+}
+
+.editor {
+  padding-top: 2rem;
+}
